# UnixNotis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/noticenterctl/: Cargo.toml
crates/noticenterctl/src/: cli_args.rs  main.rs
crates/noticenterctl/src/dbus/: dbus_ops.rs
crates/noticenterctl/src/main/: main_css_check.rs  main_css_check_cache.rs  main_css_check_cache_tests.rs  main_css_check_files.rs  main_css_check_geometry.rs  main_css_check_lint.rs  main_css_check_parse.rs  main_css_check_policy.rs  main_css_check_report.rs  main_css_check_runtime.rs  main_css_check_tests.rs  main_css_check_theme.rs  main_css_check_theme_tests.rs  main_log_follow.rs  main_output.rs
crates/noticenterctl/src/main/main_css_check_cache/: dependencies.rs  mod.rs  model.rs  parse.rs  session.rs  store.rs
crates/noticenterctl/src/main/main_css_check_geometry/: model.rs  parse.rs  stock.rs  tests.rs
crates/noticenterctl/src/main/main_css_check_lint/: mod.rs  scan.rs  values.rs
crates/noticenterctl/src/main/main_css_check_parse/: blocks.rs  declarations.rs  mod.rs  selectors.rs  types.rs
crates/noticenterctl/src/main/main_css_check_report/: mod.rs  model.rs  render.rs  style.rs  tests.rs
crates/noticenterctl/src/main/main_css_check_theme/: collect.rs  mod.rs  model.rs  paths.rs
crates/noticenterctl/src/preset/: archive.rs  command_paths.rs  command_rules.rs  config_root.rs  css_asset_refs.rs  export.rs  files.rs  filesystem.rs  filesystem_checks.rs  filesystem_secure.rs  import.rs  import_apply.rs  import_checks.rs  import_plan.rs  import_tests.rs  inspect.rs  manifest.rs  mod.rs  pathing.rs
crates/noticenterctl/src/preset/archive/: modes.rs  read.rs  tests.rs  write.rs
crates/unixnotis-center/: Cargo.toml
crates/unixnotis-center/src/: dbus.rs  main.rs  runtime.rs  startup.rs
crates/unixnotis-center/src/dbus/: dbus_backoff.rs  dbus_commands.rs  dbus_seed.rs  dbus_types.rs
crates/unixnotis-center/src/init/: actions.rs  autoclose.rs  builders.rs  constructor.rs  keyboard.rs  root.rs  search.rs  timing.rs
crates/unixnotis-center/src/media/: bus.rs  cache.rs  event_loop.rs  events.rs  media_bus.rs  media_bus_tests.rs  media_cache.rs  media_loop.rs  media_loop_events.rs  media_metadata.rs  media_policy.rs  media_runtime.rs  media_schedule.rs  media_snapshot.rs  metadata.rs  mod.rs  policy.rs  runtime.rs  schedule.rs  snapshot.rs
crates/unixnotis-center/src/startup/: tests.rs
crates/unixnotis-center/src/ui/: config.rs  config_media.rs  events.rs  hyprland.rs  init.rs  input_guard.rs  marquee.rs  media_art.rs  media_widget.rs  mod.rs  panel.rs  perf_probe.rs  refresh.rs  visibility.rs  widget_builders.rs
crates/unixnotis-daemon/: Cargo.toml
crates/unixnotis-daemon/src/: child_process.rs  daemon.rs  dbus_owner.rs  expire.rs  expire_tests.rs  main.rs  runtime_config.rs  shutdown_signal.rs  sound.rs  store.rs  trial_mode.rs
crates/unixnotis-daemon/src/child_process/: mod.rs  paths.rs  supervisor.rs
crates/unixnotis-daemon/src/daemon/: bus_names.rs  control.rs  daemon_control.rs  daemon_control_tests.rs  daemon_notifications.rs  notifications.rs  signal_burst.rs
crates/unixnotis-daemon/src/sound/: backend.rs  command.rs  mod.rs  resolve.rs
crates/unixnotis-daemon/src/store/: store_history.rs  store_identity.rs  store_inhibit.rs  store_inhibitor_api.rs  store_lifecycle.rs  store_rules.rs  store_state.rs  store_tests.rs
crates/unixnotis-daemon/src/trial_mode/: control.rs  mod.rs  owner.rs  prompt.rs
crates/unixnotis-installer/: Cargo.toml
crates/unixnotis-installer/src/: actions.rs  app.rs  checks.rs  cli.rs  detect.rs  main.rs  model.rs  paths.rs  paths_tests.rs  service_manager.rs  tests.rs  ui.rs
crates/unixnotis-installer/src/actions/: actions_binaries.rs  actions_build.rs  actions_build_accel.rs  actions_config.rs  actions_config_backup.rs  actions_config_backup_tests.rs  actions_config_tests.rs  actions_daemon.rs  actions_env.rs  actions_format.rs  actions_hyprland.rs  actions_hyprland_tests.rs  actions_install.rs  actions_plan.rs  actions_process.rs  actions_state.rs  actions_verify.rs
crates/unixnotis-installer/src/checks/: gtk.rs  mod.rs  output.rs  shell.rs  system.rs
crates/unixnotis-installer/src/cli/: tests.rs
crates/unixnotis-installer/src/main/: action_workflow.rs  main_actions.rs  main_flow.rs  main_handlers.rs  tests.rs  trial.rs
crates/unixnotis-installer/src/paths/: choice.rs  dirs.rs  discovery.rs  format.rs  index.rs
crates/unixnotis-installer/src/service_manager/: artifact.rs  command.rs  dinit.rs  manager.rs  probe.rs  readiness.rs  refresh.rs  runit.rs  s6.rs  shell.rs  systemd.rs
crates/unixnotis-installer/src/tests/: app.rs  detect.rs  env.rs  events.rs  mod.rs  model.rs  paths.rs  terminal.rs
crates/unixnotis-installer/src/ui/: build_accel.rs  confirm.rs  header.rs  mod.rs  progress.rs  reset.rs  welcome.rs  widgets.rs
crates/unixnotis-ui/: Cargo.toml
crates/unixnotis-ui/src/: css.rs  lib.rs
crates/unixnotis-ui/src/css/: css_loader.rs  css_manager.rs  css_overrides.rs  css_overrides_tests.rs  css_watch.rs
crates/unixnotis-ui/tests/: css_provider_validate.rs
(+508 files in other folders)
