[workspace]
members = [
  "crates/unixnotis-core",
  "crates/unixnotis-daemon",
  "crates/unixnotis-popups",
  "crates/unixnotis-center",
  "crates/unixnotis-ui",
  "crates/noticenterctl",
  "crates/unixnotis-installer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-channel = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
fast_image_resize = "6.0.0"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util = "0.3"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
serde_ignored = "0.1"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "process", "io-util" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
url = "2"
wait-timeout = "0.2"
zbus = { version = "4", default-features = false, features = ["tokio"] }

gio = "0.21"
gdk-pixbuf = "0.21"
glib = "0.21"
gtk = { package = "gtk4", version = "0.10" }
gtk4-layer-shell = "0.7.1"
indexmap = "2"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp", "ico"] }
ratatui = "0.30.0"
crossterm = "0.28"
unicode-width = "0.2.2"

[workspace.metadata.unixnotis.installer]
# Installer-managed binaries live in workspace metadata to avoid duplication between build and install logic.
# This list is the single source of truth for unixnotis-installer binary deployment.
binaries = ["unixnotis-daemon", "unixnotis-popups", "unixnotis-center", "noticenterctl"]
