[package]
name = "noticenterctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
flate2.workspace = true
gtk.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
toml.workspace = true
zbus.workspace = true
shell-words = "1"
unixnotis-core = { path = "../unixnotis-core" }
