[package]
name = "unixnotis-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
toml.workspace = true
unixnotis-core = { path = "../unixnotis-core" }
indexmap.workspace = true
rustix.workspace = true
unicode-width.workspace = true
