[package]
name = "unixnotis-installer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
toml.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
libc.workspace = true
unixnotis-core = { path = "../unixnotis-core" }
